# cognition_project

./: CMakeLists.txt  mainpage.dox  package.xml  ui_main_window.h
include/cognition_project/: main_window.hpp  qnode.hpp
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
