<?xml version="1.0"?>
<package>
  <name>cognition_project</name>
  <version>0.1.0</version>
  <description>

     cognition_project

  </description>
  <maintainer email="hReinemuth@gmail.com">hReinemuth</maintainer>
  <author>hReinemuth</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>tf</run_depend>
 
</package>
